k8s/prod/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: prod
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: buffyxo/frontend:prod
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "300Mi"
            cpu: "300m"
          requests:
            memory: "100Mi"
            cpu: "100m"
