k8s/prod/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: prod
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - env:
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              key: db-user
              name: mariadb-secrets
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: db-password
              name: mariadb-secrets
        - name: MYSQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: db-database
              name: mariadb-secrets
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: db-password
              name: mariadb-secrets
        image: mariadb:10.11
        name: mariadb
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-data
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-pvc
